Fixed wizard step alignment

--- a/src/main/resources/assets/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
+++ b/src/main/resources/assets/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
@@ -13,6 +13,7 @@
 
   .wizard-step-navigator {
     display: flex;
+    height: 100%;
 
     .tab-bar-item {
       white-space: nowrap;
